force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total_Amount</label>
    <summarizedField>Particular__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Particular__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>